--- a/Buri2.3/pom.xml
+++ b/Buri2.3/pom.xml
@@ -337,7 +337,7 @@
     <dependency>
     	<groupId>org.seasar.mai</groupId>
     	<artifactId>s2mai</artifactId>
-    	<version>0.9.6-SNAPSHOT</version>
+    	<version>0.9.6</version>
     	<exclusions>
     		<exclusion>
     			<groupId>freemarker</groupId>
