S2Dao用のSQLファイルを削除
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/branches/kato@509 1c266114-290a-0410-b1ce-a63319e86887

--- a/buri-core/.project
+++ b/buri-core/.project
@@ -40,6 +40,11 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>edu.umd.cs.findbugs.plugin.eclipse.findbugsBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>com.atlassw.tools.eclipse.checkstyle.CheckstyleNature</nature>
@@ -49,5 +54,6 @@
 		<nature>org.apache.derby.ui.derbyEngine</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.devzuz.q.maven.jdt.core.mavenNature</nature>
+		<nature>edu.umd.cs.findbugs.plugin.eclipse.findbugsNature</nature>
 	</natures>
 </projectDescription>
