不要フォルダを削除しました。
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/branches/kato@510 1c266114-290a-0410-b1ce-a63319e86887

--- a/buri-project/pom.xml
+++ b/buri-project/pom.xml
@@ -44,9 +44,8 @@
 	</build>
 	<modules>
 		<module>../buri-core</module>
+		<module>../buri-core-test</module>
 		<module>../buri-s2dao</module>
-		<module>../buri-test</module>
-		<module>../buri-example</module>
 	</modules>
 	<repositories>
 		<repository>
