S2Dao用テストプロジェクトを追加
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/branches/kato@517 1c266114-290a-0410-b1ce-a63319e86887

--- a/buri-project/pom.xml
+++ b/buri-project/pom.xml
@@ -46,6 +46,7 @@
 		<module>../buri-core</module>
 		<module>../buri-core-test</module>
 		<module>../buri-s2dao</module>
+		<module>../buri-s2dao-test</module>
 	</modules>
 	<repositories>
 		<repository>
