git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/branches/kato@540 1c266114-290a-0410-b1ce-a63319e86887

--- a/buri-s2dao-test/.project
+++ b/buri-s2dao-test/.project
@@ -15,9 +15,20 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>org.seasar.kijimuna.core.builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.seasar.kijimuna.core.validator</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.devzuz.q.maven.jdt.core.mavenNature</nature>
+		<nature>org.seasar.kijimuna.core.nature</nature>
 	</natures>
 </projectDescription>
