--- a/buri-s2dao-test/pom.xml
+++ b/buri-s2dao-test/pom.xml
@@ -6,7 +6,7 @@
 		</relativePath>
 		<groupId>org.escafe.buri</groupId>
 		<artifactId>buri-project</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
+		<version>1.1.0-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -150,14 +150,14 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.escafe.buri</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>buri-s2dao</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.escafe.buri</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>buri-core-test</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
