--- a/buri-s2dao/pom.xml
+++ b/buri-s2dao/pom.xml
@@ -6,13 +6,12 @@
 		</relativePath>
 		<groupId>org.escafe.buri</groupId>
 		<artifactId>buri-project</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
+		<version>1.1.0-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.escafe.buri</groupId>
 	<artifactId>buri-s2dao</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
 	<description></description>
 	<build>
 		<defaultGoal>validate</defaultGoal>
@@ -151,9 +150,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.escafe.buri</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>buri-core</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.dao</groupId>
