--- a/buri-core/s2jdbc-gen/build.xml
+++ b/buri-core/s2jdbc-gen/build.xml
@@ -1,57 +1,53 @@
 <project name="s2jdbc-gen" default="gen-ddl" basedir=".">
 
-	<property name="classpathdir" value="../target/classes" />
-	<property name="rootpackagename" value="org.escafe.buri" />
+	<property name="classPathDir" value="../target/classes" />
+	<property name="testClassPathDir" value="../target/test-classes"/>
+	<property name="rootPackageName" value="org.escafe.buri" />
 	
-	<property name="entitypackagename" value="entity" />
-	<property name="javafiledestdir" value="../src/main/java" />
-	<property name="testjavafiledestdir" value="../src/test/java" />
-	<property name="javafileencoding" value="UTF-8" />
+	<property name="entityPackageName" value="entity" />
+	<property name="javaFileDestDir" value="../src/main/java" />
+	<property name="testJavaFileDestDir" value="../src/test/java" />
+	<property name="javaFileEncoding" value="UTF-8" />
+
 	<property name="env" value="ut" />
-	<property name="jdbcmanagername" value="jdbcManager" />
+	<property name="jdbcManagerName" value="jdbcManager" />
 	
 	<property name="buriMigrateDir" value="db/migrate"/>
 	<property name="buriDdlInfoFile" value="db/ddInfo.txt"/>
 	
 	<path id="classpath">
-		<pathelement location="${classpathdir}" />
-		<pathelement location="../target/test-classes" />
-		<fileset dir="lib" />
-	</path>
-	
-	<path id="testClasspath">
-		<pathelement location="../target/test-classes" />
-		<pathelement location="${classpathdir}" />
+		<pathelement location="${classPathDir}" />
+		<pathelement location="${testClassPathDir}" />
 		<fileset dir="lib" />
 	</path>
 
 	<taskdef resource="s2jdbc-gen-task.properties" classpathref="classpath" />
 
-	<mkdir dir="${classpathdir}" />
+	<mkdir dir="${classPathDir}" />
 	
 	<target name="gen-ddl">
 		<gen-ddl
-			classpathdir="${classpathdir}"
+			classpathdir="${classPathDir}"
 			migrateDir="${buriMigrateDir}"
 			ddlInfoFile="${buriDdlInfoFile}"
-			rootpackagename="${rootpackagename}"
-			entitypackagename="${entitypackagename}"
+			rootpackagename="${rootPackageName}"
+			entitypackagename="${entityPackageName}"
 			ignoreEntityClassNamePattern="BuriPathData.*"
 			env="${env}"
-			jdbcManagerName="${jdbcmanagername}"
-			javaFileSrcDirs="${javafiledestdir}"
+			jdbcManagerName="${jdbcManagerName}"
+			javaFileSrcDirs="${javaFileDestDir}"
 			classpathref="classpath" />
 		<gen-names
-			classpathdir="${classpathdir}"
-			rootpackagename="${rootpackagename}"
-			entitypackagename="${entitypackagename}"
+			classpathdir="${classPathDir}"
+			rootpackagename="${rootPackageName}"
+			entitypackagename="${entityPackageName}"
 			namespackagename="names"
-			javafiledestdir="${javafiledestdir}"
-			javafileencoding="${javafileencoding}"
+			javafiledestdir="${javaFileDestDir}"
+			javafileencoding="${javaFileEncoding}"
 			templateFilePrimaryDir="template"
 			namesTemplateFileName="names.ftl"
 			env="${env}"
-			jdbcmanagername="${jdbcmanagername}"
+			jdbcmanagername="${jdbcManagerName}"
 			classpathref="classpath" />
 		<!--
 		<gen-service
@@ -68,7 +64,7 @@
 	-->
 	</target>
 	<target name="gen-test">
-		<gen-test classpathdir="${classpathdir}"
+		<gen-test classpathdir="${classPathDir}"
 			rootpackagename="${rootpackagename}"
 			entitypackagename="${entitypackagename}"
 			javafiledestdir="${testjavafiledestdir}"
